@@ -394,6 +394,7 @@ Cantata contains code/icons from:
     QJson          - JSON parser, taken from https://github.com/flavio/qjson
     radio icon     - Taken from WP Woothemes Ultimate (findicons.com)
                      licence: Freeware
+    Sidebar icons  - Taken frmo IcoMoon - http://icomoon.io/#icons
 
 
 Windows
